src/test/ui/issues/20000-29999/issue-28433.stderr
error[E0449]: unnecessary visibility qualifier
  --> $DIR/issue-28433.rs:2:5
   |
LL |     pub Duck,
   |     ^^^ `pub` not permitted here because it's implied

error[E0449]: unnecessary visibility qualifier
  --> $DIR/issue-28433.rs:5:5
   |
LL |     pub(crate) Dove
   |     ^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0449`.
